fix: correction in overlay z-index height

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,7 +45,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 /* mascara para escurecer o gif */
@@ -66,7 +66,7 @@ header > section {
     align-items: center;
     height: 100vh;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 section > h1 {
